ron/text-parser.cc

#line 1 "ragel/text-parser.rl"
#include "text.hpp"
#include <iostream>

namespace ron {


#line 7 "ragel/text-parser.rl"

#line 12 "ron/text-parser.cc"
static const int RON_start = 49;
static const int RON_first_final = 49;
static const int RON_error = 0;

static const int RON_en_main = 49;


#line 8 "ragel/text-parser.rl"


bool TextFrame::Cursor::Next () {

    Atoms& atoms = op_.atoms_;




    switch (cs) {
        case RON_error:
            if (off_!=0) {
                return false;
            }
            
#line 36 "ron/text-parser.cc"
	{
	cs = RON_start;
	}

#line 23 "ragel/text-parser.rl"
            break;

        case RON_FULL_STOP:
            cs = RON_error;
            return false;

        default:
            break;
    }

    if (data().size()<=off_) {
        cs = RON_error;
        return false;
    }

    slice_t body{frame_.data()};
    iter pb = data().data();
    iter p = pb + off_;
    iter pe = pb + data().size();
    iter eof = pe;

    slice_t intb{p,0};
    slice_t floatb{p,0};
    slice_t strb{p,0};
    slice_t uuidb{p,0};
    const char* lastintb{0};
    char term{0};
    slice_t value, origin;
    char variety, version;

    atoms.resize(0);
    op_.AddAtom(prev_id_.inc());
    op_.AddAtom(prev_id_);

    std::cerr<<"starting with "<<cs<<" ["<<p<<"]\n";

    
#line 79 "ron/text-parser.cc"
	{
	if ( p == pe )
		goto _test_eof;
	switch ( cs )
	{
tr6:
#line 37 "ragel/./text-grammar.rl"
	{ 
        term = (*p); 
        pos_++; 
        if (p<pe-1) {p++; cs = 49; goto _out;}
    }
	goto st49;
tr17:
#line 13 "ragel/./text-grammar.rl"
	{
        intb.end(p);
        if (intb.size() > 21) { cs = 0; {p++; cs = 49; goto _out;} }
        op_.AddAtom(Atom::Integer(body.range_of(intb))); 
        lastintb = intb.buf_;
    }
#line 37 "ragel/./text-grammar.rl"
	{ 
        term = (*p); 
        pos_++; 
        if (p<pe-1) {p++; cs = 49; goto _out;}
    }
	goto st49;
tr26:
#line 25 "ragel/./text-grammar.rl"
	{ 
        floatb.end(p);
        if (floatb.size() > 24) { cs = 0; {p++; cs = 49; goto _out;} }
        op_.AddAtom(Atom::Float(body.range_of(floatb))); 
    }
#line 37 "ragel/./text-grammar.rl"
	{ 
        term = (*p); 
        pos_++; 
        if (p<pe-1) {p++; cs = 49; goto _out;}
    }
	goto st49;
tr37:
#line 13 "ragel/././uuid-grammar.rl"
	{ value.end(p); }
#line 17 "ragel/././uuid-grammar.rl"
	{ 
        if (value.size()>Word::MAX_BASE64_SIZE || origin.size()>Word::MAX_BASE64_SIZE) {
            cs = 0;
            {p++; cs = 49; goto _out;}
        }
        uuidb.end(p);
    }
#line 30 "ragel/./text-grammar.rl"
	{
        op_.AddAtom(Uuid::Parse(variety, value, version, origin)); 
    }
#line 37 "ragel/./text-grammar.rl"
	{ 
        term = (*p); 
        pos_++; 
        if (p<pe-1) {p++; cs = 49; goto _out;}
    }
	goto st49;
tr47:
#line 16 "ragel/././uuid-grammar.rl"
	{ origin.end(p); }
#line 17 "ragel/././uuid-grammar.rl"
	{ 
        if (value.size()>Word::MAX_BASE64_SIZE || origin.size()>Word::MAX_BASE64_SIZE) {
            cs = 0;
            {p++; cs = 49; goto _out;}
        }
        uuidb.end(p);
    }
#line 30 "ragel/./text-grammar.rl"
	{
        op_.AddAtom(Uuid::Parse(variety, value, version, origin)); 
    }
#line 37 "ragel/./text-grammar.rl"
	{ 
        term = (*p); 
        pos_++; 
        if (p<pe-1) {p++; cs = 49; goto _out;}
    }
	goto st49;
tr60:
#line 13 "ragel/./text-grammar.rl"
	{
        intb.end(p);
        if (intb.size() > 21) { cs = 0; {p++; cs = 49; goto _out;} }
        op_.AddAtom(Atom::Integer(body.range_of(intb))); 
        lastintb = intb.buf_;
    }
#line 13 "ragel/././uuid-grammar.rl"
	{ value.end(p); }
#line 17 "ragel/././uuid-grammar.rl"
	{ 
        if (value.size()>Word::MAX_BASE64_SIZE || origin.size()>Word::MAX_BASE64_SIZE) {
            cs = 0;
            {p++; cs = 49; goto _out;}
        }
        uuidb.end(p);
    }
#line 33 "ragel/./text-grammar.rl"
	{ 
        if (!intb.same(uuidb))
            op_.AddAtom(Uuid::Parse(variety, value, version, origin)); 
    }
#line 37 "ragel/./text-grammar.rl"
	{ 
        term = (*p); 
        pos_++; 
        if (p<pe-1) {p++; cs = 49; goto _out;}
    }
	goto st49;
tr72:
#line 16 "ragel/././uuid-grammar.rl"
	{ origin.end(p); }
#line 17 "ragel/././uuid-grammar.rl"
	{ 
        if (value.size()>Word::MAX_BASE64_SIZE || origin.size()>Word::MAX_BASE64_SIZE) {
            cs = 0;
            {p++; cs = 49; goto _out;}
        }
        uuidb.end(p);
    }
#line 33 "ragel/./text-grammar.rl"
	{ 
        if (!intb.same(uuidb))
            op_.AddAtom(Uuid::Parse(variety, value, version, origin)); 
    }
#line 37 "ragel/./text-grammar.rl"
	{ 
        term = (*p); 
        pos_++; 
        if (p<pe-1) {p++; cs = 49; goto _out;}
    }
	goto st49;
tr80:
#line 13 "ragel/././uuid-grammar.rl"
	{ value.end(p); }
#line 17 "ragel/././uuid-grammar.rl"
	{ 
        if (value.size()>Word::MAX_BASE64_SIZE || origin.size()>Word::MAX_BASE64_SIZE) {
            cs = 0;
            {p++; cs = 49; goto _out;}
        }
        uuidb.end(p);
    }
#line 33 "ragel/./text-grammar.rl"
	{ 
        if (!intb.same(uuidb))
            op_.AddAtom(Uuid::Parse(variety, value, version, origin)); 
    }
#line 37 "ragel/./text-grammar.rl"
	{ 
        term = (*p); 
        pos_++; 
        if (p<pe-1) {p++; cs = 49; goto _out;}
    }
	goto st49;
tr89:
#line 25 "ragel/./text-grammar.rl"
	{ 
        floatb.end(p);
        if (floatb.size() > 24) { cs = 0; {p++; cs = 49; goto _out;} }
        op_.AddAtom(Atom::Float(body.range_of(floatb))); 
    }
#line 16 "ragel/././uuid-grammar.rl"
	{ origin.end(p); }
#line 17 "ragel/././uuid-grammar.rl"
	{ 
        if (value.size()>Word::MAX_BASE64_SIZE || origin.size()>Word::MAX_BASE64_SIZE) {
            cs = 0;
            {p++; cs = 49; goto _out;}
        }
        uuidb.end(p);
    }
#line 33 "ragel/./text-grammar.rl"
	{ 
        if (!intb.same(uuidb))
            op_.AddAtom(Uuid::Parse(variety, value, version, origin)); 
    }
#line 37 "ragel/./text-grammar.rl"
	{ 
        term = (*p); 
        pos_++; 
        if (p<pe-1) {p++; cs = 49; goto _out;}
    }
	goto st49;
tr96:
#line 25 "ragel/./text-grammar.rl"
	{ 
        floatb.end(p);
        if (floatb.size() > 24) { cs = 0; {p++; cs = 49; goto _out;} }
        op_.AddAtom(Atom::Float(body.range_of(floatb))); 
    }
#line 13 "ragel/././uuid-grammar.rl"
	{ value.end(p); }
#line 17 "ragel/././uuid-grammar.rl"
	{ 
        if (value.size()>Word::MAX_BASE64_SIZE || origin.size()>Word::MAX_BASE64_SIZE) {
            cs = 0;
            {p++; cs = 49; goto _out;}
        }
        uuidb.end(p);
    }
#line 33 "ragel/./text-grammar.rl"
	{ 
        if (!intb.same(uuidb))
            op_.AddAtom(Uuid::Parse(variety, value, version, origin)); 
    }
#line 37 "ragel/./text-grammar.rl"
	{ 
        term = (*p); 
        pos_++; 
        if (p<pe-1) {p++; cs = 49; goto _out;}
    }
	goto st49;
tr105:
#line 13 "ragel/././uuid-grammar.rl"
	{ value.end(p); }
#line 17 "ragel/././uuid-grammar.rl"
	{ 
        if (value.size()>Word::MAX_BASE64_SIZE || origin.size()>Word::MAX_BASE64_SIZE) {
            cs = 0;
            {p++; cs = 49; goto _out;}
        }
        uuidb.end(p);
    }
#line 6 "ragel/./text-grammar.rl"
	{
        op_.SetId(Uuid{variety, value, version, origin});
    }
#line 37 "ragel/./text-grammar.rl"
	{ 
        term = (*p); 
        pos_++; 
        if (p<pe-1) {p++; cs = 49; goto _out;}
    }
	goto st49;
tr119:
#line 13 "ragel/././uuid-grammar.rl"
	{ value.end(p); }
#line 17 "ragel/././uuid-grammar.rl"
	{ 
        if (value.size()>Word::MAX_BASE64_SIZE || origin.size()>Word::MAX_BASE64_SIZE) {
            cs = 0;
            {p++; cs = 49; goto _out;}
        }
        uuidb.end(p);
    }
#line 9 "ragel/./text-grammar.rl"
	{
        op_.SetRef(Uuid{variety, value, version, origin});
    }
#line 37 "ragel/./text-grammar.rl"
	{ 
        term = (*p); 
        pos_++; 
        if (p<pe-1) {p++; cs = 49; goto _out;}
    }
	goto st49;
tr129:
#line 16 "ragel/././uuid-grammar.rl"
	{ origin.end(p); }
#line 17 "ragel/././uuid-grammar.rl"
	{ 
        if (value.size()>Word::MAX_BASE64_SIZE || origin.size()>Word::MAX_BASE64_SIZE) {
            cs = 0;
            {p++; cs = 49; goto _out;}
        }
        uuidb.end(p);
    }
#line 9 "ragel/./text-grammar.rl"
	{
        op_.SetRef(Uuid{variety, value, version, origin});
    }
#line 37 "ragel/./text-grammar.rl"
	{ 
        term = (*p); 
        pos_++; 
        if (p<pe-1) {p++; cs = 49; goto _out;}
    }
	goto st49;
tr138:
#line 16 "ragel/././uuid-grammar.rl"
	{ origin.end(p); }
#line 17 "ragel/././uuid-grammar.rl"
	{ 
        if (value.size()>Word::MAX_BASE64_SIZE || origin.size()>Word::MAX_BASE64_SIZE) {
            cs = 0;
            {p++; cs = 49; goto _out;}
        }
        uuidb.end(p);
    }
#line 6 "ragel/./text-grammar.rl"
	{
        op_.SetId(Uuid{variety, value, version, origin});
    }
#line 37 "ragel/./text-grammar.rl"
	{ 
        term = (*p); 
        pos_++; 
        if (p<pe-1) {p++; cs = 49; goto _out;}
    }
	goto st49;
st49:
	if ( ++p == pe )
		goto _test_eof49;
case 49:
#line 392 "ron/text-parser.cc"
	switch( (*p) ) {
		case 32: goto st49;
		case 33: goto tr6;
		case 39: goto st1;
		case 44: goto tr6;
		case 46: goto st35;
		case 59: goto tr6;
		case 61: goto st9;
		case 62: goto st12;
		case 63: goto tr6;
		case 64: goto st36;
		case 94: goto st16;
		case 95: goto tr14;
		case 126: goto tr14;
	}
	if ( (*p) < 48 ) {
		if ( (*p) > 13 ) {
			if ( 43 <= (*p) && (*p) <= 45 )
				goto tr11;
		} else if ( (*p) >= 9 )
			goto st49;
	} else if ( (*p) > 57 ) {
		if ( (*p) < 71 ) {
			if ( 65 <= (*p) && (*p) <= 70 )
				goto tr13;
		} else if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto tr14;
		} else
			goto tr14;
	} else
		goto tr12;
	goto st0;
st0:
cs = 0;
	goto _out;
tr18:
#line 13 "ragel/./text-grammar.rl"
	{
        intb.end(p);
        if (intb.size() > 21) { cs = 0; {p++; cs = 1; goto _out;} }
        op_.AddAtom(Atom::Integer(body.range_of(intb))); 
        lastintb = intb.buf_;
    }
	goto st1;
tr27:
#line 25 "ragel/./text-grammar.rl"
	{ 
        floatb.end(p);
        if (floatb.size() > 24) { cs = 0; {p++; cs = 1; goto _out;} }
        op_.AddAtom(Atom::Float(body.range_of(floatb))); 
    }
	goto st1;
tr39:
#line 13 "ragel/././uuid-grammar.rl"
	{ value.end(p); }
#line 17 "ragel/././uuid-grammar.rl"
	{ 
        if (value.size()>Word::MAX_BASE64_SIZE || origin.size()>Word::MAX_BASE64_SIZE) {
            cs = 0;
            {p++; cs = 1; goto _out;}
        }
        uuidb.end(p);
    }
#line 30 "ragel/./text-grammar.rl"
	{
        op_.AddAtom(Uuid::Parse(variety, value, version, origin)); 
    }
	goto st1;
tr48:
#line 16 "ragel/././uuid-grammar.rl"
	{ origin.end(p); }
#line 17 "ragel/././uuid-grammar.rl"
	{ 
        if (value.size()>Word::MAX_BASE64_SIZE || origin.size()>Word::MAX_BASE64_SIZE) {
            cs = 0;
            {p++; cs = 1; goto _out;}
        }
        uuidb.end(p);
    }
#line 30 "ragel/./text-grammar.rl"
	{
        op_.AddAtom(Uuid::Parse(variety, value, version, origin)); 
    }
	goto st1;
tr62:
#line 13 "ragel/./text-grammar.rl"
	{
        intb.end(p);
        if (intb.size() > 21) { cs = 0; {p++; cs = 1; goto _out;} }
        op_.AddAtom(Atom::Integer(body.range_of(intb))); 
        lastintb = intb.buf_;
    }
#line 13 "ragel/././uuid-grammar.rl"
	{ value.end(p); }
#line 17 "ragel/././uuid-grammar.rl"
	{ 
        if (value.size()>Word::MAX_BASE64_SIZE || origin.size()>Word::MAX_BASE64_SIZE) {
            cs = 0;
            {p++; cs = 1; goto _out;}
        }
        uuidb.end(p);
    }
#line 33 "ragel/./text-grammar.rl"
	{ 
        if (!intb.same(uuidb))
            op_.AddAtom(Uuid::Parse(variety, value, version, origin)); 
    }
	goto st1;
tr73:
#line 16 "ragel/././uuid-grammar.rl"
	{ origin.end(p); }
#line 17 "ragel/././uuid-grammar.rl"
	{ 
        if (value.size()>Word::MAX_BASE64_SIZE || origin.size()>Word::MAX_BASE64_SIZE) {
            cs = 0;
            {p++; cs = 1; goto _out;}
        }
        uuidb.end(p);
    }
#line 33 "ragel/./text-grammar.rl"
	{ 
        if (!intb.same(uuidb))
            op_.AddAtom(Uuid::Parse(variety, value, version, origin)); 
    }
	goto st1;
tr81:
#line 13 "ragel/././uuid-grammar.rl"
	{ value.end(p); }
#line 17 "ragel/././uuid-grammar.rl"
	{ 
        if (value.size()>Word::MAX_BASE64_SIZE || origin.size()>Word::MAX_BASE64_SIZE) {
            cs = 0;
            {p++; cs = 1; goto _out;}
        }
        uuidb.end(p);
    }
#line 33 "ragel/./text-grammar.rl"
	{ 
        if (!intb.same(uuidb))
            op_.AddAtom(Uuid::Parse(variety, value, version, origin)); 
    }
	goto st1;
tr90:
#line 25 "ragel/./text-grammar.rl"
	{ 
        floatb.end(p);
        if (floatb.size() > 24) { cs = 0; {p++; cs = 1; goto _out;} }
        op_.AddAtom(Atom::Float(body.range_of(floatb))); 
    }
#line 16 "ragel/././uuid-grammar.rl"
	{ origin.end(p); }
#line 17 "ragel/././uuid-grammar.rl"
	{ 
        if (value.size()>Word::MAX_BASE64_SIZE || origin.size()>Word::MAX_BASE64_SIZE) {
            cs = 0;
            {p++; cs = 1; goto _out;}
        }
        uuidb.end(p);
    }
#line 33 "ragel/./text-grammar.rl"
	{ 
        if (!intb.same(uuidb))
            op_.AddAtom(Uuid::Parse(variety, value, version, origin)); 
    }
	goto st1;
tr97:
#line 25 "ragel/./text-grammar.rl"
	{ 
        floatb.end(p);
        if (floatb.size() > 24) { cs = 0; {p++; cs = 1; goto _out;} }
        op_.AddAtom(Atom::Float(body.range_of(floatb))); 
    }
#line 13 "ragel/././uuid-grammar.rl"
	{ value.end(p); }
#line 17 "ragel/././uuid-grammar.rl"
	{ 
        if (value.size()>Word::MAX_BASE64_SIZE || origin.size()>Word::MAX_BASE64_SIZE) {
            cs = 0;
            {p++; cs = 1; goto _out;}
        }
        uuidb.end(p);
    }
#line 33 "ragel/./text-grammar.rl"
	{ 
        if (!intb.same(uuidb))
            op_.AddAtom(Uuid::Parse(variety, value, version, origin)); 
    }
	goto st1;
tr107:
#line 13 "ragel/././uuid-grammar.rl"
	{ value.end(p); }
#line 17 "ragel/././uuid-grammar.rl"
	{ 
        if (value.size()>Word::MAX_BASE64_SIZE || origin.size()>Word::MAX_BASE64_SIZE) {
            cs = 0;
            {p++; cs = 1; goto _out;}
        }
        uuidb.end(p);
    }
#line 6 "ragel/./text-grammar.rl"
	{
        op_.SetId(Uuid{variety, value, version, origin});
    }
	goto st1;
tr121:
#line 13 "ragel/././uuid-grammar.rl"
	{ value.end(p); }
#line 17 "ragel/././uuid-grammar.rl"
	{ 
        if (value.size()>Word::MAX_BASE64_SIZE || origin.size()>Word::MAX_BASE64_SIZE) {
            cs = 0;
            {p++; cs = 1; goto _out;}
        }
        uuidb.end(p);
    }
#line 9 "ragel/./text-grammar.rl"
	{
        op_.SetRef(Uuid{variety, value, version, origin});
    }
	goto st1;
tr130:
#line 16 "ragel/././uuid-grammar.rl"
	{ origin.end(p); }
#line 17 "ragel/././uuid-grammar.rl"
	{ 
        if (value.size()>Word::MAX_BASE64_SIZE || origin.size()>Word::MAX_BASE64_SIZE) {
            cs = 0;
            {p++; cs = 1; goto _out;}
        }
        uuidb.end(p);
    }
#line 9 "ragel/./text-grammar.rl"
	{
        op_.SetRef(Uuid{variety, value, version, origin});
    }
	goto st1;
tr139:
#line 16 "ragel/././uuid-grammar.rl"
	{ origin.end(p); }
#line 17 "ragel/././uuid-grammar.rl"
	{ 
        if (value.size()>Word::MAX_BASE64_SIZE || origin.size()>Word::MAX_BASE64_SIZE) {
            cs = 0;
            {p++; cs = 1; goto _out;}
        }
        uuidb.end(p);
    }
#line 6 "ragel/./text-grammar.rl"
	{
        op_.SetId(Uuid{variety, value, version, origin});
    }
	goto st1;
st1:
	if ( ++p == pe )
		goto _test_eof1;
case 1:
#line 650 "ron/text-parser.cc"
	switch( (*p) ) {
		case 10: goto st0;
		case 13: goto st0;
		case 39: goto tr2;
		case 92: goto st0;
	}
	goto tr0;
tr0:
#line 19 "ragel/./text-grammar.rl"
	{ strb.begin(p); }
	goto st2;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
#line 666 "ron/text-parser.cc"
	switch( (*p) ) {
		case 10: goto st0;
		case 13: goto st0;
		case 39: goto tr4;
		case 92: goto st0;
	}
	goto st2;
tr2:
#line 19 "ragel/./text-grammar.rl"
	{ strb.begin(p); }
#line 20 "ragel/./text-grammar.rl"
	{ 
        strb.end(p);
        op_.AddAtom(Atom::String(body.range_of(strb))); 
    }
	goto st3;
tr4:
#line 20 "ragel/./text-grammar.rl"
	{ 
        strb.end(p);
        op_.AddAtom(Atom::String(body.range_of(strb))); 
    }
	goto st3;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
#line 694 "ron/text-parser.cc"
	switch( (*p) ) {
		case 32: goto st4;
		case 33: goto tr6;
		case 39: goto st1;
		case 44: goto tr6;
		case 59: goto tr6;
		case 61: goto st9;
		case 62: goto st12;
		case 63: goto tr6;
		case 94: goto st16;
	}
	if ( 9 <= (*p) && (*p) <= 13 )
		goto st4;
	goto st0;
tr16:
#line 13 "ragel/./text-grammar.rl"
	{
        intb.end(p);
        if (intb.size() > 21) { cs = 0; {p++; cs = 4; goto _out;} }
        op_.AddAtom(Atom::Integer(body.range_of(intb))); 
        lastintb = intb.buf_;
    }
	goto st4;
tr25:
#line 25 "ragel/./text-grammar.rl"
	{ 
        floatb.end(p);
        if (floatb.size() > 24) { cs = 0; {p++; cs = 4; goto _out;} }
        op_.AddAtom(Atom::Float(body.range_of(floatb))); 
    }
	goto st4;
tr36:
#line 13 "ragel/././uuid-grammar.rl"
	{ value.end(p); }
#line 17 "ragel/././uuid-grammar.rl"
	{ 
        if (value.size()>Word::MAX_BASE64_SIZE || origin.size()>Word::MAX_BASE64_SIZE) {
            cs = 0;
            {p++; cs = 4; goto _out;}
        }
        uuidb.end(p);
    }
#line 30 "ragel/./text-grammar.rl"
	{
        op_.AddAtom(Uuid::Parse(variety, value, version, origin)); 
    }
	goto st4;
tr46:
#line 16 "ragel/././uuid-grammar.rl"
	{ origin.end(p); }
#line 17 "ragel/././uuid-grammar.rl"
	{ 
        if (value.size()>Word::MAX_BASE64_SIZE || origin.size()>Word::MAX_BASE64_SIZE) {
            cs = 0;
            {p++; cs = 4; goto _out;}
        }
        uuidb.end(p);
    }
#line 30 "ragel/./text-grammar.rl"
	{
        op_.AddAtom(Uuid::Parse(variety, value, version, origin)); 
    }
	goto st4;
tr59:
#line 13 "ragel/./text-grammar.rl"
	{
        intb.end(p);
        if (intb.size() > 21) { cs = 0; {p++; cs = 4; goto _out;} }
        op_.AddAtom(Atom::Integer(body.range_of(intb))); 
        lastintb = intb.buf_;
    }
#line 13 "ragel/././uuid-grammar.rl"
	{ value.end(p); }
#line 17 "ragel/././uuid-grammar.rl"
	{ 
        if (value.size()>Word::MAX_BASE64_SIZE || origin.size()>Word::MAX_BASE64_SIZE) {
            cs = 0;
            {p++; cs = 4; goto _out;}
        }
        uuidb.end(p);
    }
#line 33 "ragel/./text-grammar.rl"
	{ 
        if (!intb.same(uuidb))
            op_.AddAtom(Uuid::Parse(variety, value, version, origin)); 
    }
	goto st4;
tr71:
#line 16 "ragel/././uuid-grammar.rl"
	{ origin.end(p); }
#line 17 "ragel/././uuid-grammar.rl"
	{ 
        if (value.size()>Word::MAX_BASE64_SIZE || origin.size()>Word::MAX_BASE64_SIZE) {
            cs = 0;
            {p++; cs = 4; goto _out;}
        }
        uuidb.end(p);
    }
#line 33 "ragel/./text-grammar.rl"
	{ 
        if (!intb.same(uuidb))
            op_.AddAtom(Uuid::Parse(variety, value, version, origin)); 
    }
	goto st4;
tr79:
#line 13 "ragel/././uuid-grammar.rl"
	{ value.end(p); }
#line 17 "ragel/././uuid-grammar.rl"
	{ 
        if (value.size()>Word::MAX_BASE64_SIZE || origin.size()>Word::MAX_BASE64_SIZE) {
            cs = 0;
            {p++; cs = 4; goto _out;}
        }
        uuidb.end(p);
    }
#line 33 "ragel/./text-grammar.rl"
	{ 
        if (!intb.same(uuidb))
            op_.AddAtom(Uuid::Parse(variety, value, version, origin)); 
    }
	goto st4;
tr88:
#line 25 "ragel/./text-grammar.rl"
	{ 
        floatb.end(p);
        if (floatb.size() > 24) { cs = 0; {p++; cs = 4; goto _out;} }
        op_.AddAtom(Atom::Float(body.range_of(floatb))); 
    }
#line 16 "ragel/././uuid-grammar.rl"
	{ origin.end(p); }
#line 17 "ragel/././uuid-grammar.rl"
	{ 
        if (value.size()>Word::MAX_BASE64_SIZE || origin.size()>Word::MAX_BASE64_SIZE) {
            cs = 0;
            {p++; cs = 4; goto _out;}
        }
        uuidb.end(p);
    }
#line 33 "ragel/./text-grammar.rl"
	{ 
        if (!intb.same(uuidb))
            op_.AddAtom(Uuid::Parse(variety, value, version, origin)); 
    }
	goto st4;
tr95:
#line 25 "ragel/./text-grammar.rl"
	{ 
        floatb.end(p);
        if (floatb.size() > 24) { cs = 0; {p++; cs = 4; goto _out;} }
        op_.AddAtom(Atom::Float(body.range_of(floatb))); 
    }
#line 13 "ragel/././uuid-grammar.rl"
	{ value.end(p); }
#line 17 "ragel/././uuid-grammar.rl"
	{ 
        if (value.size()>Word::MAX_BASE64_SIZE || origin.size()>Word::MAX_BASE64_SIZE) {
            cs = 0;
            {p++; cs = 4; goto _out;}
        }
        uuidb.end(p);
    }
#line 33 "ragel/./text-grammar.rl"
	{ 
        if (!intb.same(uuidb))
            op_.AddAtom(Uuid::Parse(variety, value, version, origin)); 
    }
	goto st4;
tr118:
#line 13 "ragel/././uuid-grammar.rl"
	{ value.end(p); }
#line 17 "ragel/././uuid-grammar.rl"
	{ 
        if (value.size()>Word::MAX_BASE64_SIZE || origin.size()>Word::MAX_BASE64_SIZE) {
            cs = 0;
            {p++; cs = 4; goto _out;}
        }
        uuidb.end(p);
    }
#line 9 "ragel/./text-grammar.rl"
	{
        op_.SetRef(Uuid{variety, value, version, origin});
    }
	goto st4;
tr128:
#line 16 "ragel/././uuid-grammar.rl"
	{ origin.end(p); }
#line 17 "ragel/././uuid-grammar.rl"
	{ 
        if (value.size()>Word::MAX_BASE64_SIZE || origin.size()>Word::MAX_BASE64_SIZE) {
            cs = 0;
            {p++; cs = 4; goto _out;}
        }
        uuidb.end(p);
    }
#line 9 "ragel/./text-grammar.rl"
	{
        op_.SetRef(Uuid{variety, value, version, origin});
    }
	goto st4;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
#line 898 "ron/text-parser.cc"
	switch( (*p) ) {
		case 32: goto st4;
		case 33: goto tr6;
		case 39: goto st1;
		case 44: goto tr6;
		case 59: goto tr6;
		case 61: goto st9;
		case 62: goto st12;
		case 63: goto tr6;
		case 94: goto st16;
		case 95: goto tr14;
		case 126: goto tr14;
	}
	if ( (*p) < 48 ) {
		if ( (*p) > 13 ) {
			if ( 43 <= (*p) && (*p) <= 45 )
				goto tr11;
		} else if ( (*p) >= 9 )
			goto st4;
	} else if ( (*p) > 57 ) {
		if ( (*p) < 71 ) {
			if ( 65 <= (*p) && (*p) <= 70 )
				goto tr13;
		} else if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto tr14;
		} else
			goto tr14;
	} else
		goto tr12;
	goto st0;
tr11:
#line 12 "ragel/./text-grammar.rl"
	{ intb.begin(p); }
#line 24 "ragel/./text-grammar.rl"
	{ floatb.begin(p); }
	goto st5;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
#line 940 "ron/text-parser.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st6;
	goto st0;
st6:
	if ( ++p == pe )
		goto _test_eof6;
case 6:
	switch( (*p) ) {
		case 32: goto tr16;
		case 33: goto tr17;
		case 39: goto tr18;
		case 44: goto tr17;
		case 46: goto st7;
		case 59: goto tr17;
		case 61: goto tr20;
		case 62: goto tr21;
		case 63: goto tr17;
		case 69: goto st19;
		case 94: goto tr23;
		case 101: goto st19;
	}
	if ( (*p) > 13 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st6;
	} else if ( (*p) >= 9 )
		goto tr16;
	goto st0;
st7:
	if ( ++p == pe )
		goto _test_eof7;
case 7:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st8;
	goto st0;
st8:
	if ( ++p == pe )
		goto _test_eof8;
case 8:
	switch( (*p) ) {
		case 32: goto tr25;
		case 33: goto tr26;
		case 39: goto tr27;
		case 44: goto tr26;
		case 59: goto tr26;
		case 61: goto tr28;
		case 62: goto tr29;
		case 63: goto tr26;
		case 69: goto st19;
		case 94: goto tr30;
		case 101: goto st19;
	}
	if ( (*p) > 13 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st8;
	} else if ( (*p) >= 9 )
		goto tr25;
	goto st0;
tr20:
#line 13 "ragel/./text-grammar.rl"
	{
        intb.end(p);
        if (intb.size() > 21) { cs = 0; {p++; cs = 9; goto _out;} }
        op_.AddAtom(Atom::Integer(body.range_of(intb))); 
        lastintb = intb.buf_;
    }
	goto st9;
tr28:
#line 25 "ragel/./text-grammar.rl"
	{ 
        floatb.end(p);
        if (floatb.size() > 24) { cs = 0; {p++; cs = 9; goto _out;} }
        op_.AddAtom(Atom::Float(body.range_of(floatb))); 
    }
	goto st9;
tr42:
#line 13 "ragel/././uuid-grammar.rl"
	{ value.end(p); }
#line 17 "ragel/././uuid-grammar.rl"
	{ 
        if (value.size()>Word::MAX_BASE64_SIZE || origin.size()>Word::MAX_BASE64_SIZE) {
            cs = 0;
            {p++; cs = 9; goto _out;}
        }
        uuidb.end(p);
    }
#line 30 "ragel/./text-grammar.rl"
	{
        op_.AddAtom(Uuid::Parse(variety, value, version, origin)); 
    }
	goto st9;
tr50:
#line 16 "ragel/././uuid-grammar.rl"
	{ origin.end(p); }
#line 17 "ragel/././uuid-grammar.rl"
	{ 
        if (value.size()>Word::MAX_BASE64_SIZE || origin.size()>Word::MAX_BASE64_SIZE) {
            cs = 0;
            {p++; cs = 9; goto _out;}
        }
        uuidb.end(p);
    }
#line 30 "ragel/./text-grammar.rl"
	{
        op_.AddAtom(Uuid::Parse(variety, value, version, origin)); 
    }
	goto st9;
tr65:
#line 13 "ragel/./text-grammar.rl"
	{
        intb.end(p);
        if (intb.size() > 21) { cs = 0; {p++; cs = 9; goto _out;} }
